syntax = "proto3";
package stateset.zkpverify;

option go_package = "github.com/stateset/core/x/zkpverify/types";

import "gogoproto/gogo.proto";
import "stateset/zkpverify/zkpverify.proto";

// Query defines the zkpverify gRPC query service.
service Query {
  rpc Circuit(QueryCircuitRequest) returns (QueryCircuitResponse);
  rpc Circuits(QueryCircuitsRequest) returns (QueryCircuitsResponse);
  rpc Proof(QueryProofRequest) returns (QueryProofResponse);
  rpc VerificationResult(QueryVerificationResultRequest) returns (QueryVerificationResultResponse);
  rpc SymbolicRules(QuerySymbolicRulesRequest) returns (QuerySymbolicRulesResponse);
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse);
}

message QueryCircuitRequest {
  string name = 1;
}

message QueryCircuitResponse {
  Circuit circuit = 1 [(gogoproto.nullable) = false];
}

message QueryCircuitsRequest {
  bool active_only = 1;
}

message QueryCircuitsResponse {
  repeated Circuit circuits = 1 [(gogoproto.nullable) = false];
}

message QueryProofRequest {
  uint64 proof_id = 1 [(gogoproto.customname) = "ProofID"];
}

message QueryProofResponse {
  Proof proof = 1 [(gogoproto.nullable) = false];
}

message QueryVerificationResultRequest {
  uint64 proof_id = 1 [(gogoproto.customname) = "ProofID"];
}

message QueryVerificationResultResponse {
  VerificationResult result = 1 [(gogoproto.nullable) = false];
}

message QuerySymbolicRulesRequest {
  string circuit_name = 1;
}

message QuerySymbolicRulesResponse {
  repeated SymbolicRule rules = 1 [(gogoproto.nullable) = false];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

